# crypto-trading

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  IDENTITY.md  README.md  TOOLS.md  USER.md  docker-compose.yml  pinscript.txt  pyrightconfig.json  requirements-dev.txt
ai-agent/: README.md  (+3 more)
research-platform/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
research-platform/alembic/: env.py
research-platform/alembic/versions/: 001_initial_schema.py
research-platform/app/: __init__.py  main.py
research-platform/docs/: ARCHITECTURE.md  ENV-GUIDE.md  MEMORY-LIFECYCLE.md  PHASE1-PLAN.md  PHASE10-CONTROL-CENTER.md  PHASE2-ARCHITECTURE.md  PHASE2-DEVELOPER-GUIDE.md  PHASE3-BACKTEST-ENGINE.md  PHASE5-MEMORY-LAYER.md  PHASE6-AI-RESEARCH-AGENT.md  PHASE7-PAPER-TRADING.md  PHASE8-LIVE-TRADING.md  PHASE9-N8N-AGENT.md  QDRANT-SETUP.md  SUPABASE-SETUP.md
research-platform/scripts/: download_market_archives.py  run_migration.py  run_smc_backtest.py
research-platform/tests/: test_api.py  test_dataset_builder.py  test_indicators.py  test_institutional_smc_candle_provider.py  test_institutional_smc_cp0.py  test_institutional_smc_cp1_structure.py  test_institutional_smc_cp2_liquidity_sweeps.py  test_institutional_smc_cp3_ob_fvg.py  test_institutional_smc_cp4_premium_displacement.py  test_institutional_smc_cp5_filters.py  test_market_data.py  test_phase10.py  test_phase2.py  test_phase3.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_validation.py
(+659 files in other folders)
