[project]
name = "research-platform"
version = "0.1.0"
description = "Institutional-grade crypto market data research platform — Phase 1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "ccxt>=4.4.0",
    "polars>=1.17.0",
    "pyarrow>=18.0.0",
    "numpy>=2.1.0",
    "apscheduler>=3.10.4",
    "httpx>=0.28.0",
    "python-json-logger>=2.0.7",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
